<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_connect">Подключить</string>
    <string name="menu_disconnect">Отключить</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_exit">Выход</string>
    <string name="app_name">joystick</string>
    <string name="hello_world">Hello world!</string>
    <string name="speed">скорость: </string>
    <string name="speedUnits">км/ч</string>
    <string name="degreesSymbol">°</string>
    <string name="minutusSymbol">′</string>
    <string name="course">курс</string>
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>
    
    <string name="connection_success">Подключение установлено</string>
	<string name="connection_fail">Подключение не установлено</string>
	<string name="connection_aborted">Подключение разорвано</string>
	<string name="network_settings">Сетевые настройки</string>
	<string name="server_address">"Адрес сервера: "</string>
	<string name="default_ip">192.168.0.1</string>
	<string name="filename">Имя файла:</string>
	<string name="default_mmf">Global\\BINS.mkar</string>
	<string name="common_values">Начальные значения</string>
	<string name="latitude">Широта (град. мин. сек.):</string>
	<string name="longitude">Долгота (град. мин. сек.):</string>
	<string name="height">Высота (метры):</string>
	<string name="speed_edittext">Скорость (км/ч):</string>
	<string name="course_edittext">Курс (град. мин):</string>
	<string name="latitude_hint">50.36.17</string>
	<string name="longitude_hint">137.04.54</string>
	<string name="height_hint">12000</string>
	<string name="speed_hint">720</string>
	<string name="course_hint">0.0</string>
	<string name="btn_apply">Сохранить</string>
	<string name="btn_cancel">Отмена</string>
	<string name="btn_connect">Подключить</string>
	<string name="view">Вид</string>
	<string name="reset">Сброс</string>
	
</resources>